--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
     <div id="body"><div class="inner"><div class="inner-2">
       <div class="projects">
         <h1>Projects</h1>
-        <div class="project"><div class="pj-title"><a href="http://sheesh.xyz">Sheesh.xyz</a></div><div class="pj-body">A random, useless, and what's-the-point website. As you can probably guess, all it says is 'Sheesh' exactly 11 times, making it a remarkably useful tool for teenagers of all ages. Notice: there is absolutely no reason for this website to exist, other than the sheer weirdness of the author.</div></div>
-        <div class="project"><div class="pj-title"><a href="https://stingclaw.github.io/century-theme/">Century Theme</a></div><div class="pj-body">An unofficial HTML/CSS static site template that is optimized for GitHub Pages. It is live at <a href="https://stingclaw.github.io/century-theme/">stingclaw.github.io/century-theme</a>. It is integrated with FontAwesome, a useful icon font (<a href="http://fontawesome.io">fontawesome.io</a>). It also features social media icons which you can customize. However, there may be some issues with the CSS if you're hosting it on GitHub Pages, which is a strange problem.</div></div>
-        <div class="project">
-          <div class="pj-title"><a href="https://stingclaw.github.io/fonts/">Font Collections</a></div>
-          <div class="pj-body">
-            An exhaustive collection of public domain font files.
-          </div>
-        </div>
+        <a href="http://sheesh.xyz"><div class="project"><div class="pj-inner">
+        Sheesh.xyz
+        </div></div></a>
+        <a href="http://stingclaw.github.io/fonts"><div class="project"><div class="pj-inner">
+        Fonts
+        </div></div></a>
+        <a href="http://stingclaw.github.io/century-theme"><div class="project"><div class="pj-inner">
+        Century Theme
+        </div></div></a>
+      </div>
       <div class="blog">
         <h1>Blog</h1>
+        <div class="bp-post"><div class="bp-title">Yo</div><div class="bp-date">February 10th, 2016</div><div class="bp-body"><p>Yo. Looks like chipthrasher.com should be up now. Yay. Test post. Lorem ipsum dolor sit amet, consectur adipiscing elit! You may ignore this, because it is a test. If you do not ignore it, you will be severely punished.</p></div></div>
         <div class="bp-post"><div class="bp-title">Wasting Time with CSS</div><div class="bp-date">February 8th, 2016</div><div class="bp-body"><p>For at least half a year, I have used complex CSS to limit the number of words per line, a feature which most webpages have. I would use a @media query, such as the following:</p><pre>@media screen and (min-width: 700px) {
   #inner {
     width: 700px;
@@ -46,7 +49,7 @@
       </div>
     </div></div></div>
     <div id="footer"><div class="inner"><div class="inner-2">
-      Copyright &copy; 2016 Chip Thrasher. All rights reserved.
+      Copyright &copy; 2016 <a href="mailto:yo@chipthrasher.com">Chip Thrasher</a>. All rights reserved.
     </div></div></div>
     <script src="page.js" type="text/javascript"></script>
   </body>
