--- a/index.html
+++ b/index.html
@@ -11,44 +11,10 @@
 	</header>
 	<section>
 		<a href="http://www.sheesh.xyz"><div>SHEESH.XYZ</div></a>
-		<a href="snap"><div>SNAP.JS</div></a>
+		<a href="snap.js/"><div>SNAP.JS</div></a>
 		<a href="http://www.baconteam.com/"><div>TEAM BACON</div></a>
-		<a href="aah"><div>TILDE CLUB</div></a>
-		<a href="fonts"><div>FONTS</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
-		<a href=""><div>...</div></a>
+		<a href="aah/"><div>TILDE CLUB</div></a>
+		<a href="fonts/"><div>FONTS</div></a>
 	</section>
   </body>
 </html>
