--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<a href="aah/"><div>TILDE CLUB</div></a>
 		<a href="fonts/"><div>FONTS</div></a>
 		<a href="css3junk/"><div>CSS3 JUNK</div></a>
+		<a href="editor/"><div>LAME EDITOR</div></a>
+		<a href="geocode/"><div>GEOCODE</div></a>
 	</section>
   </body>
 </html>
