--- a/troll.html
+++ b/troll.html
@@ -5,11 +5,14 @@
     <meta charset="utf-8">
     <style>
       body {
-        
+        margin: 0px auto;
+        padding: 20px;
+        max-width: 800px;
+        font-family: sans-serif;
       }
     </style>
   </head>
   <body>
-  
+    <h1>hey my name is chip thrasher and i think sometims about pikcles and how much i like them today im gona be teling you ALLLLLLL abot them so lisen up!</h1>
   </body>
 </html>
