--- a/troll.html
+++ b/troll.html
@@ -8,11 +8,15 @@
         margin: 0px auto;
         padding: 20px;
         max-width: 800px;
+        background: #eee;
         font-family: sans-serif;
       }
     </style>
   </head>
   <body>
     <h1>hey my name is chip thrasher and i think sometims about pikcles and how much i like them today im gona be teling you ALLLLLLL abot them so lisen up!</h1>
+    <p>
+      so i sometimes woner what is in a box of pikcle juce. wenn i do so i, conmetplate my inpending doom considreing the poblems about pikcles and how much i like "em.
+    </p>
   </body>
 </html>
