--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<a href="css3junk/"><div>CSS3 JUNK</div></a>
 		<a href="editor/"><div>LAME EDITOR</div></a>
 		<a href="geocode/"><div>GEOCODE</div></a>
+		<a href="http://www.ebay.com/usr/igthebold"><div>EBAY STUFF</div></a>
 		<a href="troll.html"><div>TROLLS</div></a>
 		<a href="https://github.com/stingclaw/pokedata/tree/master#pok%C3%A9mon-tcg-image-database"><div>POK&Eacute;DATA</div></a>
 	</section>
