--- a/troll.html
+++ b/troll.html
@@ -18,5 +18,8 @@
     <p>
       so i sometimes woner what is in a box of pikcle juce. wenn i do so i, conmetplate my inpending doom considreing the poblems about pikcles and how much i like "em.
     </p>
+    <p>
+      on gihub and insagram sometimes people are like" what is wrong with ur spelling dude!" but im like" man grow up i spell perfecly!!!" obviosly they doesnt know what their talking about becaus i spell ALL MY WORS perfecly.
+    </p>
   </body>
 </html>
