--- a/troll.html
+++ b/troll.html
@@ -21,5 +21,17 @@
     <p>
       on gihub and insagram sometimes people are like" what is wrong with ur spelling dude!" but im like" man grow up i spell perfecly!!!" obviosly they doesnt know what their talking about becaus i spell ALL MY WORS perfecly.
     </p>
+    <p>
+      also peple talk about when i talk its a strem of conscentsness. BUT ITS NOT PEPLE! i mean like sersly dude why would i do that it sounds like im a troll but OBOSLY im not a troll especaly consedering this is caled troll.html and since that doesnt even SAY THAT!!!!!!!!!!!!!!!!!!!
+    </p>
+    <p>
+      lets hope my cosins dont find out of me teling you ALL ABOUT THEM hahaha this outa be ridch. one of them sometime syas to me, chip why dont u spell. so i says to him whats it to you yong man you sould be in school DUH and then hes like ok you totly got me their. so im like yep i did, and he now wil bow down to me and now comes the ritch part so my cosin is the age of 11 and he is not knowing how to spell some words that i obvosly CAN spell like obosly and digerydoo. la ta tee ta and i will now tell you the ritch part.
+    </p>
+    <p>
+      the retch part is that my cosin is comeing to my hose tomorow and that h'ell see ALL of this but nvm thats bad so now i will tell you the writch part. the werch part is that he alwys coms up to me and says chip ur loser so u know what i do? i go to gihub insargam and say WHY DO U ALWYS HAFF TO BE SO MEEEEEN TO ME!!!!!! that sure shode him hahaha
+    </p>
+    <p>
+      so thats the writche part and no i will tell you gys about pikcles!!! see u next week ill add to it.
+    </p>
   </body>
 </html>
