--- a/troll.html
+++ b/troll.html
@@ -14,7 +14,7 @@
     </style>
   </head>
   <body>
-    <h1>hey my name is chip thrasher and i think sometims about pikcles and how much i like them today im gona be teling you ALLLLLLL abot them so lisen up!</h1>
+    <h1>hey my name is bag thatcher and i think sometims about pikcles and how much i like them today im gona be teling you ALLLLLLL abot them so lisen up!</h1>
     <p>
       so i sometimes woner what is in a box of pikcle juce. wenn i do so i, conmetplate my inpending doom considreing the poblems about pikcles and how much i like "em.
     </p>
@@ -25,10 +25,10 @@
       also peple talk about when i talk its a strem of conscentsness. BUT ITS NOT PEPLE! i mean like sersly dude why would i do that it sounds like im a troll but OBOSLY im not a troll especaly consedering this is caled troll.html and since that doesnt even SAY THAT!!!!!!!!!!!!!!!!!!!
     </p>
     <p>
-      lets hope my cosins dont find out of me teling you ALL ABOUT THEM hahaha this outa be ridch. one of them sometime syas to me, chip why dont u spell. so i says to him whats it to you yong man you sould be in school DUH and then hes like ok you totly got me their. so im like yep i did, and he now wil bow down to me and now comes the ritch part so my cosin is the age of 11 and he is not knowing how to spell some words that i obvosly CAN spell like obosly and digerydoo. la ta tee ta and i will now tell you the ritch part.
+      lets hope my cosins dont find out of me teling you ALL ABOUT THEM hahaha this outa be ridch. one of them sometime syas to me, bag why dont u spell. so i says to him whats it to you yong man you sould be in school DUH and then hes like ok you totly got me their. so im like yep i did, and he now wil bow down to me and now comes the ritch part so my cosin is the age of 11 and he is not knowing how to spell some words that i obvosly CAN spell like obosly and digerydoo. la ta tee ta and i will now tell you the ritch part.
     </p>
     <p>
-      the retch part is that my cosin is comeing to my hose tomorow and that h'ell see ALL of this but nvm thats bad so now i will tell you the writch part. the werch part is that he alwys coms up to me and says chip ur loser so u know what i do? i go to gihub insargam and say WHY DO U ALWYS HAFF TO BE SO MEEEEEN TO ME!!!!!! that sure shode him hahaha
+      the retch part is that my cosin is comeing to my hose tomorow and that h'ell see ALL of this but nvm thats bad so now i will tell you the writch part. the werch part is that he alwys coms up to me and says bag ur loser so u know what i do? i go to gihub insargam and say WHY DO U ALWYS HAFF TO BE SO MEEEEEN TO ME!!!!!! that sure shode him hahaha
     </p>
     <p>
       so thats the writche part and no i will tell you gys about pikcles!!! see u next week ill add to it.
