--- a/troll.html
+++ b/troll.html
@@ -31,7 +31,7 @@
       the retch part is that my cosin is comeing to my hose tomorow and that h'ell see ALL of this but nvm thats bad so now i will tell you the writch part. the werch part is that he alwys coms up to me and says bag ur loser so u know what i do? i go to gihub insargam and say WHY DO U ALWYS HAFF TO BE SO MEEEEEN TO ME!!!!!! that sure shode him hahaha
     </p>
     <p>
-      so thats the writche part and no i will tell you gys about pikcles!!! see u next week ill add to it.
+      so thats the writche part and sometimes peple are like IS UR NAME A BAG OR A BAG and i burs into ters and say ITS A BAG PLZ STOP BEEN MEEEEEEN TO MEEEEEEE!!!!!!
     </p>
   </body>
 </html>
