--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<a href="geocode/"><div>GEOCODE</div></a>
 		<a href="http://www.ebay.com/usr/igthebold"><div>EBAY STUFF</div></a>
 		<a href="troll.html"><div>TROLLS</div></a>
+		<a href="http://www.amazon.com/Fight-Freedom-Chip-Thrasher/dp/1517161487/">FIGHT FOR FREEDOM</a>
 		<a href="https://github.com/stingclaw/pokedata/tree/master#pok%C3%A9mon-tcg-image-database"><div>POK&Eacute;DATA</div></a>
 	</section>
   </body>
