--- a/money.html
+++ b/money.html
@@ -41,6 +41,6 @@
 		<div>
 			Before you go on your life-changing quest for free money, attempt to listen to others first. This tip can save you from many trials in life, especially those of getting free money.
 		</div>
-		<strong>And that's the end! Next time, don't listen to me unless you're <a href="trump.pdf">voting for the Trump</a>.</strong>
+		<strong>And that's the end! Next time, don't listen to me unless you're <a href="trumbp.pdf">voting for the Trump</a>.</strong>
 	</body>
 </html>
