--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<section>
 		<a href="http://www.sheesh.xyz"><div>SHEESH.XYZ</div></a>
 		<a href="snap.js/"><div>SNAP.JS</div></a>
+		<a href="trumbp.pdf"><div>VOTE TRUMP?</div></a>
+		<a href="money.html"><div>GETTING MONEY!?</div></a>
 		<a href="http://www.baconteam.com/"><div>TEAM BACON</div></a>
 		<a href="aah/"><div>TILDE CLUB</div></a>
 		<a href="fonts/"><div>FONTS</div></a>
