--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<title>Wat</title>
-	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="assets/main.css">
+    <meta charset="utf-8">
+    <title>chipthrasher.com</title>
+    <link rel="stylesheet" href="assets/main.css">
   </head>
   <body>
-	<header>
-		WAT
-	</header>
-	<section>
-		<a href="http://www.sheesh.xyz"><div>SHEESH.XYZ</div></a>
-		<a href="snap.js/"><div>SNAP.JS</div></a>
-		<a href="trumbp.pdf"><div>VOTE TRUMP?</div></a>
-		<a href="money.html"><div>GETTING MONEY!?</div></a>
-		<a href="http://www.baconteam.com/"><div>TEAM BACON</div></a>
-		<a href="aah/"><div>TILDE CLUB</div></a>
-		<a href="fonts/"><div>FONTS</div></a>
-		<a href="css3junk/"><div>CSS3 JUNK</div></a>
-		<a href="editor/"><div>LAME EDITOR</div></a>
-		<a href="geocode/"><div>GEOCODE</div></a>
-		<a href="http://www.ebay.com/usr/igthebold"><div>EBAY STUFF</div></a>
-		<a href="troll.html"><div>TROLLS</div></a>
-		<a href="http://www.amazon.com/Fight-Freedom-Chip-Thrasher/dp/1517161487/"><div>FIGHT FOR FREEDOM</div></a>
-		<a href="https://github.com/stingclaw/pokedata/tree/master#pok%C3%A9mon-tcg-image-database"><div>POK&Eacute;DATA</div></a>
-	</section>
+    <div class="outer">
+      <h1 class="header"><a title="Try hovering over the links below" class="header-a" href="/">chipthrasher.com</a></h1>
+      <div class="inner">
+        <div class="menu">
+          <a href="/">Home</a>
+          <a href="//soundcloud.com/stereofield2015" title="Music">StereoField (SoundCloud)</a>
+          <a href="//stereofield2015.bandcamp.com/" title="Music">StereoField (BandCamp)</a>
+          <a href="//ebay.com/sch/igthebold/m.html" title="Pokémon Cards">eBay</a>
+          <a href="/geocode/" title="A simple, open-source text editor for OSX">GeoCode</a>
+          <a href="//amazon.com/Fight-Freedom-Chip-Thrasher/dp/1517161487/" title="First Book">Fight for Freedom</a>
+          <a href="/pipe/" title="A Work in Progress!">The Pipe Empire</a>
+          <a href="//github.com/stingclaw/pokedata/tree/master#pok%C3%A9mon-tcg-image-database" title="TCG Database">Pokémon TCG Images</a>
+          <a href="/css3junk/" title="Heavy on the browser but cool">Playing with CSS3</a>
+          <a href="//baconteam.com" title="Because bacon is better">Team Bacon</a>
+          <a href="/snap.js/" title="jQuery extension">Snap.JS</a>
+          <a href="/aah/" title="May cause seizures :)">Old Webpage</a>
+          <a href="#" onclick="pop()">Do not click this button!</a>
+        </div>
+      </div>
+      <a onclick="window.prompt('Don\'t spam me! \n\nI will track you down.\n\n', 'thechipthrasher&commat;gmail&period;com');">thechipthrasher&commat;gmail&period;com</a>
+    </div>
+    <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script>function pop() {for(var i = 0; i < 10; i++) {window.open('not-to/', '', 'height=700;width=700');}}</script>
   </body>
 </html>
