--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="//stereofield2015.bandcamp.com"><i class="fa fa-music fa-2x"></i></a>
     </div>
     <div id="body">
-      Hello World! I am an aspiring homeschooled teenage developer, musician, and writer. I play Pokémon Red on a <a target="_blank" href="//www.raspberrypi.org">Raspberry Pi 2</a> with <a target="_blank" href="//retropie.org.uk/">RetroPie</a>, in progress of making a text editor (to learn Cocoa programming), and waiting for the third <a target="_blank" href="//www.goodreads.com/book/show/22249695-masterminds">Masterminds</a> book to come out. If you want to contact me, shoot me an email or message me on Twitter. If you want to spam me, don't.
+      Hello World! I am an aspiring homeschooled teenage developer, musician, and writer. I play Pokémon Red on a <a target="_blank" href="//www.raspberrypi.org">Raspberry Pi 2</a> with <a target="_blank" href="//retropie.org.uk/">RetroPie</a>, fly a drone, am in progress of making a text editor (to learn Cocoa programming), am writing another book, and waiting for the third <a target="_blank" href="//www.goodreads.com/book/show/22249695-masterminds">Masterminds</a> book to come out. If you want to contact me, shoot me an email or message me on Twitter.
       <h1>Projects</h1>
       <div class="project"><a target="_blank" href="//github.com/stingclaw/geocode">
         <h3>GeoCode</h3>
