--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="utf-8">
     <title>chipthrasher.com</title>
     <link rel="stylesheet" href="assets/main.css">
+    <link rel="shortcut icon" href="//twitter.com/thechipthrasher/profile_image?size=original">
     <script src="//use.fontawesome.com/018d720f56.js"></script>
   </head>
   <body>
     <div id="header"><a href="/">
       <div id="inner">
-      </a><a href="/"><img id="image" src="https://twitter.com/thechipthrasher/profile_image?size=original"></a><a href="/">
+      </a><a href="/"><img id="image" src="//twitter.com/thechipthrasher/profile_image?size=original"></a><a href="/">
         <span id="name">Chip Thrasher</span>
       </div>
     </a></div>
     <div id="nav">
-      <a href="//twitter.com/thechipthrasher"><i class="fa fa-twitter fa-2x"></i></a>
+      <a target="_blank" href="//twitter.com/thechipthrasher"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="mailto:thechipthrasher&commat;gmail&period;com"><i class="fa fa-envelope fa-2x"></i></a>
-      <a href="//github.com/stingclaw"><i class="fa fa-github fa-2x"></i></a>
-      <a href="//stereofield2015.bandcamp.com"><i class="fa fa-music fa-2x"></i></a>
+      <a target="_blank" href="//github.com/stingclaw"><i class="fa fa-github fa-2x"></i></a>
+      <a target="_blank" href="//stereofield2015.bandcamp.com"><i class="fa fa-music fa-2x"></i></a>
     </div>
     <div id="body">
       Hello World! I am a homeschooled aspiring teenage developer, musician, and writer. I play Pokémon Red on a <a target="_blank" href="//www.raspberrypi.org">Raspberry Pi 2</a> with <a target="_blank" href="//retropie.org.uk/">RetroPie</a>, fly a drone, am in progress of making a text editor (to learn Cocoa programming), am writing another book, and waiting for the third <a target="_blank" href="//www.goodreads.com/book/show/22249695-masterminds">Masterminds</a> book to come out. If you want to contact me, shoot me an email or message me on Twitter.
@@ -60,5 +61,7 @@
       </a></div>
     </div>
     <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw=" crossorigin="anonymous"></script>
+    <script src="/assets/main.js"></script>
   </body>
 </html>
