--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header"><a href="/">
       <div id="inner">
       </a><a href="/"><img id="image" src="//twitter.com/thechipthrasher/profile_image?size=original"></a><a href="/">
-        <span id="name">Chip Thrasher</span>
+        <span id="name">chipthrasher.com</span>
       </div>
     </a></div>
     <div id="nav">
@@ -21,7 +21,7 @@
       <a target="_blank" href="//stereofield2015.bandcamp.com"><i class="fa fa-music fa-2x"></i></a>
     </div>
     <div id="body">
-      Hello World! I am a homeschooled aspiring teenage developer, musician, and writer. I play Pokémon Red on a <a target="_blank" href="//www.raspberrypi.org">Raspberry Pi 2</a> with <a target="_blank" href="//retropie.org.uk/">RetroPie</a>, fly a drone, am in progress of making a text editor (to learn Cocoa programming), am writing another book, and waiting for the third <a target="_blank" href="//www.goodreads.com/book/show/22249695-masterminds">Masterminds</a> book to come out. If you want to contact me, shoot me an email or message me on Twitter.
+      Hello World! I am a homeschooled aspiring teenage developer, musician, and writer. I play <a href="http://theletteresixtim.es">VVVVVV</a>, fly a drone, make music in Sunvox, am writing another book, and waiting for the third <a target="_blank" href="//www.goodreads.com/book/show/22249695-masterminds">Masterminds</a> book to come out. If you want to contact me, shoot me an email or message me on Twitter.
       <h1>Projects</h1>
       <div class="project"><a target="_blank" href="//github.com/stingclaw/geocode">
         <h3>GeoCode</h3>
@@ -29,28 +29,16 @@
           A simple, open-source text editor for OSX (my goal in programming this is to learn Cocoa programming).
         </div>
       </a></div>
-      <div class="project"><a target="_blank" href="//github.com/stingclaw/snap.js">
-        <h3>Snap.JS</h3>
-        <div>
-          A jQuery extension made originally for personal use. Makes a lot of functions (especially ones I use on a daily basis) easier to use.
-        </div>
-      </a></div>
-      <div class="project"><a target="_blank" href="//soundcloud.com/stereofield2015">
+      <div class="project"><a target="_blank" href="https://soundcloud.com/stereofield2015">
         <h3>StereoField</h3>
         <div>
-          If you want to listen to my music, it's all on SoundCloud. And when your face contorts when you hear it, please don't email me about it.
+          If you want to listen to my music, it's all on SoundCloud (plus YouTube and Bandcamp). And when your face contorts when you hear it, please don't email me about it.
         </div>
       </a></div>
-      <div class="project"><a href="mailto:thechipthrasher&commat;gmail&period;com?subject=Hurry up with the Pipe Empire!&amp;body=I can't wait all day, you know.">
-        <h3>The Pipe Empire</h3>
+      <div class="project"><a href="https://www.youtube.com/channel/UCck28Y45xLnOQzqD6C-v9UQ">
+        <h3>Sunvox Music YouTube Channel</h3>
         <div>
-          Another book I'm writing. Just guess what it's about.
-        </div>
-      </a></div>
-      <div class="project"><a href="//github.com/stingclaw/pokedata">
-        <h3>Pokémon TCG Image Database</h3>
-        <div>
-          A database of all the Pokémon TCG card images.
+          A YouTube channel with various music created in SunVox.
         </div>
       </a></div>
 
@@ -58,6 +46,10 @@
       <div class="project"><a href="//www.facebook.com/STEAMJunction">
         <h3>STEAM Junction</h3>
         <div>A makerspace near where I live. Check it out!</div>
+      </a></div>
+      <div class="project"><a href="//warmplace.ru/soft/sunvox">
+        <h3>SunVox</h3>
+        <div>A crossplatform music creation tool made by Alexander Zolotov (<a href="//warmplace.ru">warmplace.ru</a>)</div>
       </a></div>
     </div>
     <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
