--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <a target="_blank" href="//twitter.com/thechipthrasher"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="mailto:thechipthrasher&commat;gmail&period;com"><i class="fa fa-envelope fa-2x"></i></a>
       <a target="_blank" href="//github.com/stingclaw"><i class="fa fa-github fa-2x"></i></a>
-      <a target="_blank" href="//stereofield2015.bandcamp.com"><i class="fa fa-music fa-2x"></i></a>
+      <a target="_blank" href="//stereofield2015.bandcamp.com"><i class="fa fa-bandcamp fa-2x"></i></a>
+      <a target="_blank" href="//soundcloud.com/stereofield2015"><i class="fa fa-soundcloud fa-2x"></i></a>
     </div>
     <div id="body">
       Hello World! I am a homeschooled aspiring teenage developer, musician, and writer. I play <a href="http://theletteresixtim.es">VVVVVV</a>, try to conquer the German leaderboards on <a href="//memrise.com">Memrise</a>, fly a drone, make music in Sunvox, am writing another book, and waiting for the third <a target="_blank" href="//www.goodreads.com/book/show/22249695-masterminds">Masterminds</a> book to come out. If you want to contact me, shoot me an email or message me on Twitter.
