--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a target="_blank" href="//soundcloud.com/stereofield2015"><i class="fa fa-soundcloud fa-2x"></i></a>
     </div>
     <div id="body">
-      Hello World! I am a homeschooled aspiring teenage developer, musician, and writer. I play <a href="http://theletteresixtim.es">VVVVVV</a>, try to conquer the German leaderboards on <a href="//memrise.com">Memrise</a>, fly a drone, make music in Sunvox, am writing another book, and waiting for the third <a target="_blank" href="//www.goodreads.com/book/show/22249695-masterminds">Masterminds</a> book to come out. If you want to contact me, shoot me an email or message me on Twitter.
+      Hello World! I am a homeschooled aspiring teenage developer, musician, and writer. I play <a href="http://theletteresixtim.es">VVVVVV</a>, try to conquer the German leaderboards on <a href="//memrise.com">Memrise</a>, make Doctor Who theme videos on <a href="//youtube.com/c/chipthrasher">YouTube</a>, fly a drone, make music in Sunvox, am writing another book, and waiting for the third <a target="_blank" href="//www.goodreads.com/book/show/22249695-masterminds">Masterminds</a> book to come out. If you want to contact me, shoot me an email or message me on Twitter.
       <h1>Projects</h1>
       <div class="project"><a target="_blank" href="//github.com/stingclaw/geocode">
         <h3>GeoCode</h3>
