--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a target="_blank" href="//twitter.com/thechipthrasher"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="mailto:thechipthrasher&commat;gmail&period;com"><i class="fa fa-envelope fa-2x"></i></a>
       <a target="_blank" href="//github.com/stingclaw"><i class="fa fa-github fa-2x"></i></a>
+      <a target="_blank" href="https://www.youtube.com/c/chipthrasher"><i class="fa fa-youtube-play fa-2x"></i></a>
       <a target="_blank" href="//stereofield2015.bandcamp.com"><i class="fa fa-bandcamp fa-2x"></i></a>
       <a target="_blank" href="//soundcloud.com/stereofield2015"><i class="fa fa-soundcloud fa-2x"></i></a>
     </div>
