--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>chipthrasher.com</title>
     <link rel="stylesheet" href="assets/main.css">
     <link rel="shortcut icon" href="//twitter.com/thechipthrasher/profile_image?size=original">
-    <script src="//use.fontawesome.com/018d720f56.js"></script>
+    <script src="https://use.fontawesome.com/6cfe733e7a.js"></script>
   </head>
   <body>
     <div id="header"><a href="/">
