--- a/submit.html
+++ b/submit.html
@@ -10,10 +10,14 @@
         padding: 20px;
         border-top: 10px solid #333333;
         color: #333333;
+        font-family: "Open Sans", "Helvetica Neue", sans-serif;
+        font-weight: 300;
       }
     </style>
   </head>
   <body>
+    <h1>Submit SunVox Song</h1>
+    Coming soon!
   </body>
 </html>
   
