--- a/submit.html
+++ b/submit.html
@@ -3,6 +3,7 @@
   <head>
     <title>Submit SunVox Song</title>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="">
     <style>
       body {
         margin: 0px auto;
@@ -12,6 +13,9 @@
         color: #333333;
         font-family: "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: 300;
+      }
+      h1 {
+        margin-top: 0px;
       }
     </style>
   </head>
