--- a/submit.html
+++ b/submit.html
@@ -8,14 +8,11 @@
       body {
         margin: 0px auto;
         max-width: 800px;
-        padding: 20px;
+        padding: 20px 0px;
         border-top: 10px solid #333333;
         color: #333333;
         font-family: "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: 300;
-      }
-      h1 {
-        margin-top: 0px;
       }
     </style>
   </head>
