--- a/submit.html
+++ b/submit.html
@@ -18,7 +18,18 @@
   </head>
   <body>
     <h1>Submit SunVox Song</h1>
-    Coming soon!
+    <div>
+      Submit a song to the <a href="https://www.youtube.com/channel/UCck28Y45xLnOQzqD6C-v9UQ">SunVox Music</a> YouTube channel!
+    </div>
+    <div>
+      To submit a song, please email me (<a href="mailto:thechipthrasher@gmail.com">thechipthrasher@gmail.com</a>) with the subject line "New Song Submission". Please provide the song title and author name with proper capitalization (keep in mind what you type will be exactly what you see on the video), as well as your website if you wish. Also make sure you submit the .sunvox file as an attachment in the email. Without it we can't put your song on YouTube.
+    </div>
+    <div>
+      If you want to submit multiple songs, feel free to do so, but make sure you distinguish the song information for each song, so we don't get confused when putting your video up. Please note that your song *may* be rejected if it doesn't pass the screening process.
+    </div>
+    <div>
+      If your song gets rejected:<br>Don't take it personally. The idea that for every one good drawing, you produce a hundred bad ones applies to music. Making songs that aren't perfect is part of music. Keep going, and try hard! Music is great and fun, especially with SunVox! ;)
+    </div>
   </body>
 </html>
   
