--- a/submit.html
+++ b/submit.html
@@ -14,6 +14,17 @@
         font-family: "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: 300;
       }
+      div {
+        line-height: 1.5;
+      }
+      a {
+        color: inherit;
+        text-decoration: none;
+        border-bottom: 1px solid transparent;
+      }
+      a:hover {
+        border-bottom-color: #333333; 
+      }
     </style>
   </head>
   <body>
