--- a/submit.html
+++ b/submit.html
@@ -27,8 +27,11 @@
         border-bottom-color: #333333; 
       }
       a#submit {
-        padding: 20px;
-        background: #dddddd;
+        padding: 15px 10px;
+        margin-top: 20px;
+        background: #333333;
+        color: #ffffff;
+        text-decoration: none;
         border-radius: 3px;
       }
     </style>
