--- a/submit.html
+++ b/submit.html
@@ -33,6 +33,7 @@
         color: #ffffff;
         text-decoration: none;
         border-radius: 3px;
+        display: inline-block;
       }
     </style>
   </head>
