--- a/submit.html
+++ b/submit.html
@@ -27,7 +27,7 @@
         border-bottom-color: #333333; 
       }
       a#submit {
-        padding: 15px 10px;
+        padding: 15px 12px;
         margin-top: 20px;
         background: #333333;
         color: #ffffff;
@@ -49,7 +49,7 @@
       If you want to submit multiple songs, feel free to do so, but make sure you distinguish the song information for each song, so we don't get confused when putting your video up. Please note that your song *may* be rejected if it doesn't pass the screening process.
     </div>
     <div>
-      If your song gets rejected:<br>Don't take it personally. The idea that for every one good drawing, you produce a hundred bad ones applies to music. Making songs that aren't perfect is part of music. Keep going, and try hard! Music is great and fun, especially with SunVox! ;)
+      <strong>If your song gets rejected:</strong><br>Don't take it personally. The idea that for every one good drawing, you produce a hundred bad ones applies to music. Making songs that aren't perfect is part of music. Keep going, and try hard! Music is great and fun, especially with SunVox! ;)
     </div>
     <a id="submit" href="mailto:thechipthrasher@gmail.com">Submit a Song</a>
   </body>
