--- a/submit.html
+++ b/submit.html
@@ -21,10 +21,10 @@
       a.link {
         color: inherit;
         text-decoration: none;
-        border-bottom: 1px solid transparent;
+        border-bottom: 1px solid #333333;
       }
       a.link:hover {
-        border-bottom-color: #333333; 
+        border-bottom-color: transparent; 
       }
       a#submit {
         padding: 15px 12px;
