--- a/submit.html
+++ b/submit.html
@@ -21,7 +21,8 @@
       a.link {
         color: inherit;
         text-decoration: none;
-        border-bottom: 1px solid #333333;
+        color: #555555;
+        border-bottom: 1px solid #444444;
       }
       a.link:hover {
         border-bottom-color: transparent; 
