--- a/submit.html
+++ b/submit.html
@@ -9,10 +9,11 @@
         margin: 0px auto;
         max-width: 800px;
         padding: 20px 0px;
-        border-top: 15px solid #333333;
+        border-top: 20px solid #333333;
         color: #333333;
         font-family: "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: 300;
+        background: #eeeeee;
       }
       div {
         line-height: 1.5;
