Rewrite Submit.html

--- a/submit.html
+++ b/submit.html
@@ -16,7 +16,7 @@
         color: #333333;
         font-family: "Open Sans", "Helvetica Neue", sans-serif;
         font-weight: 300;
-        background: #eeeeee;
+        background: #f8f8f8;
       }
       div {
         line-height: 1.5;
@@ -40,6 +40,9 @@
         border-radius: 3px;
         display: inline-block;
       }
+      ol {
+        margin: 10px 0px;
+      }
     </style>
   </head>
   <body>
@@ -48,15 +51,21 @@
       Submit a song to the <a class="link" href="https://www.youtube.com/channel/UCck28Y45xLnOQzqD6C-v9UQ">SunVox Music</a> YouTube channel!
     </div>
     <div>
-      To submit a song, please email me (<a class="link" href="mailto:thechipthrasher@gmail.com">thechipthrasher@gmail.com</a>) with the subject line "New Song Submission". Please provide the song title and author name with proper capitalization (keep in mind what you type will be exactly what you see on the video), as well as your website if you wish. Also make sure you submit the .sunvox file as an attachment in the email. Without it we can't put your song on YouTube.
+      To submit a song, please do one of the following:
+      <ol>
+        <li>Email me (<a class="link" href="mailto:stereofield2015@gmail.com">stereofield2015@gmail.com</a>)</li>
+        <li>Talk to me on the <a class="link" href="https://warmcommunity.slack.com/messages/submissions/">#submissions</a> channel of the Sunvox <a class="link" href="http://warmcommunity.space">Slack Channel</a>.</li>
+      </ol>
+      Make sure you provide your song title and artist name <strong>as they will appear on the video</strong>, as well as your website(s) if you wish. I'll reply to your email/message ASAP.
     </div>
     <div>
-      If you want to submit multiple songs, feel free to do so, but make sure you distinguish the song information for each song, so we don't get confused when putting your video up. Please note that your song *may* be rejected if it doesn't pass the screening process.
+      Please note that your song *may* be rejected if it doesn't pass the screening process.
     </div>
     <div>
-      <strong>If your song gets rejected:</strong><br>Don't take it personally. The idea that for every one good drawing, you produce a hundred bad ones applies to music. Making songs that aren't perfect is part of music. Keep going, and try hard! Music is great and fun, especially with SunVox! ;)
+      <strong>If your song gets rejected:</strong><br>
+      Don't take it personally. The idea that for every one good drawing, you produce a hundred bad ones applies to music as well. Making songs that aren't perfect is part of music. Keep going, and try hard! Music is great and fun, especially with SunVox! ;)
     </div>
-    <a id="submit" href="mailto:thechipthrasher@gmail.com">Submit a Song</a>
+    <a id="submit" href="mailto:thechipthrasher@gmail.com">Email Me</a>
   </body>
 </html>
   
