--- a/submit.html
+++ b/submit.html
@@ -31,13 +31,13 @@
       a.link:hover {
         border-bottom-color: transparent; 
       }
-      a#submit {
+      a.button {
         padding: 15px 12px;
         margin-top: 20px;
-        background: #333333;
-        color: #ffffff;
+        background: #666;
+        color: #fff;
         text-decoration: none;
-        border-radius: 3px;
+        border-radius: 2px;
         display: inline-block;
       }
       ol {
@@ -48,13 +48,13 @@
   <body>
     <h1>Submit SunVox Song</h1>
     <div>
-      Submit a song to the <a class="link" href="https://www.youtube.com/channel/UCck28Y45xLnOQzqD6C-v9UQ">SunVox Music</a> YouTube channel!
+      Submit a song to the <a target="_blank" class="link" href="https://www.youtube.com/channel/UCck28Y45xLnOQzqD6C-v9UQ">SunVox Music</a> YouTube channel!
     </div>
     <div>
       To submit a song, please do one of the following:
       <ol>
         <li>Email me (<a class="link" href="mailto:stereofield2015@gmail.com">stereofield2015@gmail.com</a>)</li>
-        <li>Talk to me on the <a class="link" href="https://warmcommunity.slack.com/messages/submissions/">#submissions</a> channel of the Sunvox <a class="link" href="http://warmcommunity.space">Slack Channel</a>.</li>
+        <li>Talk to me on the <a target="_blank" class="link" href="https://warmcommunity.slack.com/messages/submissions/">#submissions</a> channel of the Sunvox <a target="_blank" class="link" href="http://warmcommunity.space">Slack Channel</a>.</li>
       </ol>
       Make sure you provide your song title and artist name <strong>as they will appear on the video</strong>, as well as your website(s) if you wish. I'll reply to your email/message ASAP.
     </div>
@@ -65,7 +65,7 @@
       <strong>If your song gets rejected:</strong><br>
       Don't take it personally. The idea that for every one good drawing, you produce a hundred bad ones applies to music as well. Making songs that aren't perfect is part of music. Keep going, and try hard! Music is great and fun, especially with SunVox! ;)
     </div>
-    <a id="submit" href="mailto:thechipthrasher@gmail.com">Email Me</a>
+    <a class="button" href="mailto:stereofield2015@gmail.com">Submit (Email)</a> / <a class="button" href="https://warmcommunity.slack.com/messages/submissions/" target="_blank">Submit (Slack)</a>
   </body>
 </html>
   
