--- a/submit.html
+++ b/submit.html
@@ -11,7 +11,7 @@
       body {
         margin: 0px auto;
         max-width: 800px;
-        padding: 20px 15px;
+        padding: 20px;
         border-top: 20px solid #333333;
         color: #333333;
         font-family: "Open Sans", "Helvetica Neue", sans-serif;
@@ -32,7 +32,7 @@
         border-bottom-color: transparent; 
       }
       a.button {
-        padding: 15px 12px;
+        padding: 13px;
         margin-top: 20px;
         background: #666;
         color: #fff;
@@ -65,7 +65,8 @@
       <strong>If your song gets rejected:</strong><br>
       Don't take it personally. The idea that for every one good drawing, you produce a hundred bad ones applies to music as well. Making songs that aren't perfect is part of music. Keep going, and try hard! Music is great and fun, especially with SunVox! ;)
     </div>
-    <a class="button" href="mailto:stereofield2015@gmail.com">Submit (Email)</a> / <a class="button" href="https://warmcommunity.slack.com/messages/submissions/" target="_blank">Submit (Slack)</a>
+    <a class="button" href="mailto:stereofield2015@gmail.com">Submit (Email)</a>
+    <a class="button" href="https://warmcommunity.slack.com/messages/submissions/" target="_blank">Submit (Slack)</a>
   </body>
 </html>
   
