Add Sunvox Images into Submit.html

--- a/submit.html
+++ b/submit.html
@@ -8,6 +8,10 @@
       html {
         background: #ffffff; 
       }
+      img {
+        width: 100px;
+        height: 59px;
+      }
       body {
         margin: 0px auto;
         max-width: 800px;
@@ -49,6 +53,14 @@
     <h1>Submit SunVox Song</h1>
     <div>
       Submit a song to the <a target="_blank" class="link" href="https://www.youtube.com/channel/UCck28Y45xLnOQzqD6C-v9UQ">SunVox Music</a> YouTube channel!
+    </div>
+    <div>
+      <img title="Tangrine - Early Fall (Remade by Manwe)" src="https://raw.githubusercontent.com/stingclaw/stingclaw.github.io/master/Manwe.png">
+      <img title="SawZer - Cosmic Turtle" src="https://raw.githubusercontent.com/stingclaw/stingclaw.github.io/master/SawZer%20-Cosmic%20Turtle.png">
+      <img title="StereoField - Eclipse" src="https://raw.githubusercontent.com/stingclaw/stingclaw.github.io/master/StereoField%20Eclipse.png">
+      <img title="Boomlinde - Caravan" src="https://raw.githubusercontent.com/stingclaw/stingclaw.github.io/master/Boomlinde%20-Caravan.png">
+      <img title="Kostya_M - Midnight" src="https://raw.githubusercontent.com/stingclaw/stingclaw.github.io/master/Kostya_M%20Mdidnight.png">
+      <img title="NightRadio - Unspoken Words" src="https://raw.githubusercontent.com/stingclaw/stingclaw.github.io/master/Unspokemon%20Words.png">
     </div>
     <div>
       To submit a song, please do one of the following:
