--- a/submit.html
+++ b/submit.html
@@ -61,6 +61,7 @@
       <img title="Boomlinde - Caravan" src="https://raw.githubusercontent.com/stingclaw/stingclaw.github.io/master/Boomlinde%20-Caravan.png">
       <img title="Kostya_M - Midnight" src="https://raw.githubusercontent.com/stingclaw/stingclaw.github.io/master/Kostya_M%20Mdidnight.png">
       <img title="NightRadio - Unspoken Words" src="https://raw.githubusercontent.com/stingclaw/stingclaw.github.io/master/Unspokemon%20Words.png">
+      <img title="DJ Deman - Electrohouse" src="https://raw.githubusercontent.com/stingclaw/stingclaw.github.io/master/DJ%20Deman%20-%20Electrohouse.png">
     </div>
     <div>
       To submit a song, please do one of the following:
