--- a/index.html
+++ b/index.html
@@ -1,61 +1,29 @@
 <!DOCTYPE html>
+<!--
+
+I programmed this website
+
+-->
 <html>
   <head>
-    <meta charset="utf-8">
     <title>chipthrasher.com</title>
-    <link rel="stylesheet" href="assets/main.css">
-    <link rel="shortcut icon" href="//twitter.com/thechipthrasher/profile_image?size=original">
-    <script src="https://use.fontawesome.com/6cfe733e7a.js"></script>
+    <meta charset="utf-8">
+    <style>
+    body {
+      background: #333333;
+      font-family: "Open Sans", sans-serif;
+color: white;
+text-align: center;
+    }
+img {
+  margin-top: 100px;
+  text-align: center;
+  border-radius: 999px;
+}
+    </style>
   </head>
   <body>
-    <div id="header"><a href="/">
-      <div id="inner">
-      </a><a href="/"><img id="image" src="//twitter.com/thechipthrasher/profile_image?size=original"></a><a href="/">
-        <span id="name">chipthrasher.com</span>
-      </div>
-    </a></div>
-    <div id="nav">
-      <a target="_blank" href="//twitter.com/thechipthrasher"><i class="fa fa-twitter fa-2x"></i></a>
-      <a href="mailto:thechipthrasher&commat;gmail&period;com"><i class="fa fa-envelope fa-2x"></i></a>
-      <a target="_blank" href="//github.com/stingclaw"><i class="fa fa-github fa-2x"></i></a>
-      <a target="_blank" href="https://www.youtube.com/c/chipthrasher"><i class="fa fa-youtube-play fa-2x"></i></a>
-      <a target="_blank" href="//stereofield2015.bandcamp.com"><i class="fa fa-bandcamp fa-2x"></i></a>
-      <a target="_blank" href="//soundcloud.com/stereofield2015"><i class="fa fa-soundcloud fa-2x"></i></a>
-    </div>
-    <div id="body">
-      Hello World! I am a homeschooled aspiring teenage developer, musician, and writer. I play <a href="http://theletteresixtim.es">VVVVVV</a>, try to conquer the German leaderboards on <a href="//memrise.com">Memrise</a>, make Doctor Who theme videos on <a href="//youtube.com/c/chipthrasher">YouTube</a>, fly a drone, make music in Sunvox, am writing another book, and waiting for the third <a target="_blank" href="//www.goodreads.com/book/show/22249695-masterminds">Masterminds</a> book to come out. If you want to contact me, shoot me an email or message me on Twitter.
-      <h1>Projects</h1>
-      <div class="project"><a target="_blank" href="//github.com/stingclaw/geocode">
-        <h3>GeoCode</h3>
-        <div>
-          A simple, open-source text editor for OSX (my goal in programming this is to learn Cocoa programming).
-        </div>
-      </a></div>
-      <div class="project"><a target="_blank" href="https://soundcloud.com/stereofield2015">
-        <h3>StereoField</h3>
-        <div>
-          If you want to listen to my music, it's all on SoundCloud (plus YouTube and Bandcamp). And when your face contorts when you hear it, please don't email me about it.
-        </div>
-      </a></div>
-      <div class="project"><a href="https://www.youtube.com/channel/UCck28Y45xLnOQzqD6C-v9UQ">
-        <h3>Sunvox Music YouTube Channel</h3>
-        <div>
-          A YouTube channel with various music created in SunVox.
-        </div>
-      </a></div>
-
-      <h1>References</h1>
-      <div class="project"><a href="//www.facebook.com/STEAMJunction">
-        <h3>STEAM Junction</h3>
-        <div>A makerspace near where I live. Check it out!</div>
-      </a></div>
-      <div class="project"><a href="//warmplace.ru/soft/sunvox">
-        <h3>SunVox</h3>
-        <div>A crossplatform music creation tool made by Alexander Zolotov (<a href="//warmplace.ru">warmplace.ru</a>)</div>
-      </a></div>
-    </div>
-    <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw=" crossorigin="anonymous"></script>
-    <script src="/assets/main.js"></script>
+    <a href="https://soundcloud.com/stereofield2015"><img src="https://twitter.com/thechipthrasher/profile_image?size=original" width="400"></a>
+    <h1>You Just Got Chipped</h1>
   </body>
 </html>
