--- a/submit.html
+++ b/submit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+CTYPE html>
 <html>
   <head>
     <title>Submit SunVox Song</title>
@@ -82,4 +82,4 @@
     <a class="button" href="https://warmcommunity.slack.com/messages/submissions/" target="_blank">Submit (Slack)</a>
   </body>
 </html>
-  
+
