--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@ I programmed this website
 -->
 <html>
   <head>
-    <title>chipthrasher.com</title>
+    <title>You Just Got Chipped / chipthrasher.com</title>
     <meta charset="utf-8">
+    <meta name="description" content="You Just Got Chipped, New York style">
     <style>
     body {
       background: #333333;
