--- a/submit.html
+++ b/submit.html
@@ -24,15 +24,19 @@
       a.link {
         color: inherit;
         text-decoration: none;
-        color: #555;
+        color: #999;
         border-bottom: 1px solid #555;
+      }
+      a.link:hover {
+        border-bottom-color: transparent;
+        color: #ffffff;
       }
     </style>
   </head>
   <body>
     <h1>Submit Sunvox Song</h1>
     <div>
-      To submit a song, either message <a href="https://soundcloud.com/stereofield2015">@stereofield2015</a> on SoundCloud or email <a href="mailto:stereofield2015@gmail.com" class="link">stereofield2015@gmail.com</a>.
+      To submit a song, either message <a class="link" href="https://soundcloud.com/stereofield2015">@stereofield2015</a> on SoundCloud or email <a href="mailto:stereofield2015@gmail.com" class="link">stereofield2015@gmail.com</a>.
     </div>
   </body>
 </html>
